#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME communication)

# ######################################################################################################################
# Submodules
# ######################################################################################################################

add_subdirectory(cloudprotocol)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES communication.cpp)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES
    aos::common::utils
    aos::common::config
    aos::core::common::crypto
    aos::cm::communication::cloudprotocol
    Poco::Crypto
    Poco::Foundation
    Poco::Net
    Poco::NetSSL
    Poco::JSON
)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
