#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME networkmanager)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES networkmanager.cpp netpool.cpp ipsubnet.cpp dnsserver.cpp)

# ######################################################################################################################
# Includes
# ######################################################################################################################

set(INCLUDES ${Libnl_INCLUDE_DIRS})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES
    aos::core::cm::networkmanager
    aos::core::common::tools
    aos::common::network
    aos::common::utils
    ${Libnl_LIBRARIES}
    Poco::Foundation
    Poco::Util
)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    INCLUDES
    ${INCLUDES}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
