#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#
# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME smcontroller)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES smcontroller.cpp smhandler.cpp)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES aos::common::logger aos::common::utils aos::common::pbconvert aos::api::sm aos::core::common::alerts)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
