#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME cloudprotocol)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES
    alerts.cpp
    certificates.cpp
    common.cpp
    desiredstatus.cpp
    envvars.cpp
    log.cpp
    monitoring.cpp
    provisioning.cpp
    servicediscovery.cpp
    state.cpp
    unitstatus.cpp
)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES aos::common::utils aoscommon)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
