#
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME iamclient)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES permservicehandler.cpp publicservicehandler.cpp)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES ${TARGET_NAMESPACE}::utils ${TARGET_NAMESPACE}::pbconvert aoscommon aoscoreapi-gen-iam)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
