#
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME iamclient)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES
    certificateservice.cpp
    nodesservice.cpp
    permservice.cpp
    provisioningservice.cpp
    publiccertservice.cpp
    publiccurrentnodeservice.cpp
    publicidentityservice.cpp
    publicnodeservice.cpp
    publicpermservice.cpp
    tlscredentials.cpp
)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES aos::common::utils aos::common::pbconvert aos::core::common::iamclient aos::api::iam)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
