#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET_NAME migration)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES migration.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

set(TARGET ${TARGET_PREFIX}_${TARGET_NAME})

add_library(${TARGET} STATIC ${SOURCES})
add_library(${TARGET_NAMESPACE}::${TARGET_NAME} ALIAS ${TARGET})

# ######################################################################################################################
# Includes
# ######################################################################################################################

# ######################################################################################################################
# Compiler flags
# ######################################################################################################################

target_compile_options(${TARGET} PRIVATE -Wstack-usage=${AOS_STACK_USAGE})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} PUBLIC ${TARGET_NAMESPACE}::utils aoscommon Poco::DataSQLite)
