#
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME pbconvert)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES common.cpp)

if(WITH_IAM_API)
    list(APPEND SOURCES iam.cpp)
endif()

if(WITH_SM_API)
    list(APPEND SOURCES sm.cpp)
endif()

# ######################################################################################################################
# Compile options
# ######################################################################################################################

set(COMPILE_OPTIONS -Wno-format-truncation)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES aos::common::utils aos::common::jsonprovider Poco::Util)

if(WITH_IAM_API)
    list(APPEND LIBRARIES aos::api::iam)
endif()

if(WITH_SM_API)
    list(APPEND LIBRARIES aos::api::sm)
endif()

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    COMPILE_OPTIONS
    ${COMPILE_OPTIONS}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
